methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:5: error: not found: value Coloar
  b = (getCouleurSol()==Coloar.green)
                        ^