methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var b = false  
  avance()
  b = (getCouleurSol()==Coloar.green)
  recule()
  return b
}
